[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ltx-mlx"
version = "0.1.0"
description = "LTX-Video generation optimized for Apple Silicon — pure MLX, no PyTorch required"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "mlx>=0.30.0",
    "numpy",
    "pillow",
    "sentencepiece",
    "imageio[ffmpeg]",
]

[project.optional-dependencies]
dev = ["torch", "safetensors", "diffusers", "transformers"]

[project.scripts]
ltx-mlx = "ltx_mlx.cli:main"

[tool.setuptools.packages.find]
include = ["ltx_mlx*"]
